compile_fail_tests/struct_unbound_field.stderr
error: pattern requires `..` due to inaccessible fields
 --> compile_fail_tests/struct_unbound_field.rs:9:9
  |
9 |         const_destructure!(let Wrap { } = self);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::const_destructure` which comes from the expansion of the macro `const_destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
